--- a/http/apache/HISTORY
+++ b/http/apache/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Use upstream apache.gpg
+
 2007-09-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.39, SECURITY_PATCH=2, updated SOURCE_URLs
 	  CVE-2006-5752, CVE-2007-3304
