--- a/libs/apr/HISTORY
+++ b/libs/apr/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Use upstream apache.gpg key and signatures
+
 2006-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.8
 
