--- a/libs/apr-util/HISTORY
+++ b/libs/apr-util/HISTORY
@@ -1,5 +1,6 @@
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Use upstream apache.gpg key and signatures
+	  Updated to 1.2.12
 
 2007-03-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional sqlite, sqlite2, psotgresql
