--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2007-11-30 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 0.9.50
+
 2007-11-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.49
 
