--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-11-30 David Brown <dmlb2000@gmail.com>
+    * BUILD: added some checks for xen kernel
+    * INSTALL: added some checks for xen kernel
+
 2007-11-26 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.23.9
 	* info/patches/maintenance_patches/patch-2.6.23.9: added
