--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-01 Ismael Luceno <ismael@sourcemage.org>
+	* devel/codeblocks: new spell, wxwidgets based IDE
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* httpd/apache2/httpd.gpg: Moved to grimoire level apache.gpg
 
