--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-30 Eric Sandall <sandalle@sourcemage.org>
+	* e/e16-themes: Added e16 themes (Bug #14146)
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* httpd/apache2/httpd.gpg: Moved to grimoire level apache.gpg
 
