--- a/e/enlightenment/HISTORY
+++ b/e/enlightenment/HISTORY
@@ -1,3 +1,6 @@
+2007-11-30 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Added optional dependency on e16-themes
+
 2007-11-09 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: entice is dead. Long live entice!
 
