--- a/windowmanagers/xfce/HISTORY
+++ b/windowmanagers/xfce/HISTORY
@@ -1,5 +1,8 @@
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Works with any provider of LIBGIF
+	* BUILD: Pass user $OPTS last to override our settings
+	  Proper data-dir switch is --with-data-dir (Bug #14140)
+	  Don't use "echo" to set OPTS
 
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2 and MAINTAINER.
