--- a/mail/dovecot/HISTORY
+++ b/mail/dovecot/HISTORY
@@ -1,3 +1,7 @@
+2007-11-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 1.0.8
+	  updated managesieve patch to v9
+
 2007-11-04 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updatade managesive patch to 8.3, PATCHLEVEL++
 	  users highly advised to upgrade
