--- a/utils/gpm/HISTORY
+++ b/utils/gpm/HISTORY
@@ -1,3 +1,9 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Apply gpm-OPEN_MAX-1.patch and gpm-OPEN_MAX-2.patch
+	  (Bug #14109)
+	* gpm-OPEN_MAX-1.patch: Patch from P. Berens to fix Bug #14109
+	* gpm-OPEN_MAX-2.patch: Patch from P. Berens to fix Bug #14109
+
 2006-07-09 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFIGURE: make the dialogs optional #11598 and clean it up
 	* FINAL: insert default values if none were specified
