--- a/utils/gpm/HISTORY
+++ b/utils/gpm/HISTORY
@@ -3,7 +3,9 @@
 	  (Bug #14109)
 	* BUILD: Fails to compile with multiple make jobs
 	* gpm-OPEN_MAX-1.patch: Patch from P. Berens to fix Bug #14109
+	  Updated to apply cleanly against 1.20.1
 	* gpm-OPEN_MAX-2.patch: Patch from P. Berens to fix Bug #14109
+	  Updated to apply cleanly against 1.20.1
 
 2006-07-09 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFIGURE: make the dialogs optional #11598 and clean it up
