--- a/xorg-driver/xf86-video-radeonhd/HISTORY
+++ b/xorg-driver/xf86-video-radeonhd/HISTORY
@@ -1,3 +1,8 @@
+2007-11-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: added version 1.0.0
+	* PREPARE: added option for SCM version
+	* PRE_BUILD: added option for scm version
+
 2007-10-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, HISTORY: created spell
 	* PREPARE, PRE_BUILD: created spell
