--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,7 @@
+2007-12-01 Ladislav Hagara <hgr@vabo.cz>
+	* DEPENDS, BUILD, INSTALL: removed support for 2.4.X linux kernels
+	lm_sensors 3.0 support only linux kernels > 2.6.5
+
 2007-11-26 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 3.0.0, changed tarball and signature extensions
 	* lm_sensors.gpg: now contains 38F02FC8 key
