--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,11 @@
+2007-12-01 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to add devel version 3.0 beta 1
+	* DEPENDS: Removed hardcoded options for depends.
+	* PRE_BUILD: Removed cvs download code. Bug #13517
+	* INSTALL: Need separte patches for firefox-config
+	* PEPARE: Changed working for devel version
+	* mozconfig3: Added since we need separate config options for 3.0
+
 2007-12-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++
 	  updated spell to 2.0.0.11
