--- a/x11/xosview/HISTORY
+++ b/x11/xosview/HISTORY
@@ -1,3 +1,7 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* glibc-2.6.patch: Added to remove custom snprintf (Bug #14141)
+	* PRE_BUILD: Apply glibc-2.6.patch
+
 2006-06-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, set grimoire-wide
 
