--- a/perl-cpan/mp3-info/HISTORY
+++ b/perl-cpan/mp3-info/HISTORY
@@ -1,3 +1,7 @@
+2007-12-01 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.23
+	  update SOURCE_URL to new sponser-maintainer
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
