--- a/gnome2-apps/gcstar/HISTORY
+++ b/gnome2-apps/gcstar/HISTORY
@@ -1,3 +1,10 @@
+2007-12-01 Robin Cook <rcook@wyrms.net>
+	* DEPENDS: added depends of perl, html-parser, perl-libnet, uri, and 
+	  xml-parser-expat
+	  added optional depends of time-piece, perl-gtk2-spell, mp3-info, 
+	  mp3-tag, ogg-vorbis-header-pureperl, digest-md5, mime-base64, and
+	  datetime-format-strptime
+
 2007-11-22 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DETAILS: updating spell to 1.3.0, temporary use SOURCHE_HASH instead of SOURCE_GPG
         * DEPENDS: Adding xml-libxml (is now needed)
