--- a/net/bind/HISTORY
+++ b/net/bind/HISTORY
@@ -1,3 +1,6 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 9.4.2
+
 2007-11-17 David Brown <dmlb2000@gmail.com>
 	* PRE_REMOVE: if /etc/bind is a symlink the backup doesn't work
 
