--- a/archive/apt/HISTORY
+++ b/archive/apt/HISTORY
@@ -1,3 +1,7 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.7.9
+	  Removed UPDATED
+
 2007-01-04 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated to 0.6.46.4
 
@@ -6,3 +10,4 @@
 
 2006-02-01 David Brown <dmlb2000@gmail.com>
 	* ALL: created spell
+
