--- a/kernels/ndiswrapper/HISTORY
+++ b/kernels/ndiswrapper/HISTORY
@@ -1,3 +1,6 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.50
+
 2007-11-09 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: updated to 1.49 and added svn version
 	* DEPENDS: added depends on subversion if needed
