--- a/devel/ruby/HISTORY
+++ b/devel/ruby/HISTORY
@@ -1,3 +1,6 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.8.6-p111
+
 2007-09-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: ruby-1.8.6=p110
 
