--- a/crypto/seahorse/HISTORY
+++ b/crypto/seahorse/HISTORY
@@ -1,3 +1,6 @@
+2007-12-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.21.3 (devel)
+
 2007-10-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.20.1 (both stable and devel)
 
