--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,9 @@
+2007-12-02 George Sherwood <george@beernabeer.com>
+	* DEPENDS: Cleaned up. 3.0 beta cannot use system npsr, nss.
+	  depends python
+	* PRE_BUILD: 3.0 doesn't need cairo-fixes or x-lib patches.
+	* mozconfig3: Cannot use system npsr/nss. Canvas works.
+
 2007-12-01 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to add devel version 3.0 beta 1
 	* DEPENDS: Removed hardcoded options for depends.
