--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to verison 1.4.9
+
 2007-11-22 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.4.8. SECURITY_PATCH++
 
