--- a/security/snort/HISTORY
+++ b/security/snort/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.8.0.1
+
 2007-10-13 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.8.0.  Updated to new sig.
 	* B10683B0.gpg: Added new sig file for versions 2.8.0 and greater
