--- a/disk/cdrkit/HISTORY
+++ b/disk/cdrkit/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Ismael Luceno <ismael@sourcemage.org>
+	* INSTALL, CONFIGURE: add more cdrecord compatibility symlinks
+
 2007-05-12 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILDS: use cmake_build
 
