--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,8 @@
+2007-12-02 George Sherwood <george@beernabeer.com>
+	* ImageMagick-6.3.7-2.tar.bz2.sig: Updated sig.  Diff'ed
+	  changes and it appears upstream changed and didn't update 
+	  version.
+
 2007-12-01 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: Added 3 mirrors (which also have older releases available)
 
