--- a/xorg-driver/xf86-video-mga/HISTORY
+++ b/xorg-driver/xf86-video-mga/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 1.9.100
+
 2007-09-07 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 1.4.7
 
