--- a/devel/ghc/HISTORY
+++ b/devel/ghc/HISTORY
@@ -1,3 +1,7 @@
+2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS, BUILD: updated spell to 6.8.1, cleaned up
+	* UP_TRIGGERS: added, up_trigger every library on every cast
+
 2007-10-30 Alexander Tsamutali <astsmtl@gmail.com>
 	* CONFIGURE, PRE_BUILD, build.mk.no-opts:
 	  Added option for quick unoptimised build
