--- a/haskell/haskell-x11/HISTORY
+++ b/haskell/haskell-x11/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 1.4.0
+
 2007-10-21 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 1.2.3
 
