--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
 	* haskell/haskell-parsec: new spell, monadic parser combinators
+	* haskell/haskell-stm: new spell, software transactional memory
 
 2007-12-01 Robin Cook <rcook@wyrms.net>
 	* perl-cpan: added spell perl-gtk2-spell
