--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.5.3.7
+
 2007-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.3.6
 
