--- a/xorg-app/compiz/HISTORY
+++ b/xorg-app/compiz/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 0.6.2
+
 2007-10-03 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: Changed SOURCE_URL[0] extension
 	  updated spell to 0.6.0
