--- a/xorg-driver/xf86-video-intel/HISTORY
+++ b/xorg-driver/xf86-video-intel/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 2.2.0
+
 2007-09-22 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS, DEPENDS, CONFLICTS: Created
 	  Initial copy from xf86-video-i810
