--- a/xorg-driver/xf86-video-nv/HISTORY
+++ b/xorg-driver/xf86-video-nv/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 2.1.6
+
 2007-10-03 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 2.1.5
 
