--- a/xorg-driver/xf86-video-sis/HISTORY
+++ b/xorg-driver/xf86-video-sis/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 0.9.4
+
 2007-07-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated description
 
