--- a/xorg-proto/glproto/HISTORY
+++ b/xorg-proto/glproto/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 1.4.9
+
 2007-08-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update description & short (automated)
 
