--- a/xorg-driver/xf86-input-joystick/HISTORY
+++ b/xorg-driver/xf86-input-joystick/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 1.3.0
+
 2007-09-07 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 1.2.3
 
