--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 1.2.0
+
 2007-07-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated description
 
