--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,5 +1,9 @@
+2007-12-02 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: version update to 0.5.7.1
+
 2007-11-28 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DEPENDS: Updating version to 0.5.7
+
 2007-11-26 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DETAILS: Updating version to 0.5.6.96
 
