--- a/libs/libesmtp/HISTORY
+++ b/libs/libesmtp/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: optionally depend on OpenSSL
+
 2007-11-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.4
 
