--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.2.22
+
 2007-11-27 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: Fails the first time if it has to regenerate the Makefile
 	  The error denoting this state is: "Makefile has been modified by
