--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -1,5 +1,9 @@
 2007-12-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2.22
+	* BUILD: KSRC is the proper way to define what kernel to use to compile
+	  Set KVER as well, just in case
+	* INSTALL: KMISC is the proper way to define what kernel to install to
+	  Need to set KVER for their run of depmod
 	* FINAL: Run depmod on the correct kernel version
 
 2007-11-27 Eric Sandall <sandalle@sourcemage.org>
