--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,5 +1,6 @@
 2007-12-02 Elisamuel Resto <ryuji@sourcemage.org>
-	* DETAILS: version update to 0.5.7.1
+	* DETAILS: version update to 0.5.7.1, fixed SOURCE_DIRECTORY
+	* BUILD, INSTALL: use default_python_(build|install)
 
 2007-11-28 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DEPENDS: Updating version to 0.5.7
