--- a/xfce/libxfcegui4/HISTORY
+++ b/xfce/libxfcegui4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.4.2 (Xfce 4.4.2), gurus => upstream
+
 2007-11-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: fixed dbh dep, cleaned up
 
