--- a/xfce/orage/HISTORY
+++ b/xfce/orage/HISTORY
@@ -1,3 +1,8 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.4.2 (Xfce 4.4.2),
+	  gurus => upstream, cleaned up
+	* DEPENDS: cleaned up
+
 2007-04-10 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 4.4.1
 
