--- a/xfce/thunar/HISTORY
+++ b/xfce/thunar/HISTORY
@@ -1,3 +1,6 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: refixed SOURCE_URL, gurus => upstream
+
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.9.0. Fixed SOURCE_URL and WEB_SITE
 
