--- a/xfce/xfce4-profile/HISTORY
+++ b/xfce/xfce4-profile/HISTORY
@@ -1,3 +1,7 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.4.2 (Xfce 4.4.2)
+	* DEPENDS: removed useless dbh dep
+
 2007-11-25 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Added optional dependency on xfmedia and xfburn
 
