--- a/kde4/plasma/HISTORY
+++ b/kde4/plasma/HISTORY
@@ -1,3 +1,6 @@
+2007-12-03  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.96.2
+
 2007-11-27  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.96.0
 
