--- a/kde4/kdegraphics4/HISTORY
+++ b/kde4/kdegraphics4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-03  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.96.2
+
 2007-11-28  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.96.1
 
