--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-12-03 David Brown <dmlb2000@gmail.com>  
+	* latest.defaults: updated latest to patch-2.6.24-rc4
+	* info/patches/PRE_2_6/patch-2.6.24-rc4: added
+
 2007-12-03 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to 2.6.24-rc3-mm2
 	* info/patches/mm_patches/2.6.24-rc3-mm2: added
