--- a/net/vnstat/HISTORY
+++ b/net/vnstat/HISTORY
@@ -1,3 +1,6 @@
+2007-12-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.5
+
 2007-05-13 Ladislav Hagara <hgr@vabo.cz>
 	* *: created this spell, version 1.4
 
