--- a/kernels/madwifi/HISTORY
+++ b/kernels/madwifi/HISTORY
@@ -1,3 +1,6 @@
+2007-12-04 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version bumped to 0.9.3.3
+
 2007-10-13 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: SVN URL changed from /trunk to /madwifi/trunk
 
