--- a/gnome2-apps/osmo/HISTORY
+++ b/gnome2-apps/osmo/HISTORY
@@ -1,3 +1,6 @@
+2007-12-04 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: updated to 0.1.4
+
 2007-11-19 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 0.1.2, changed SOURCE_URL to use sourceforge
 
