--- a/windowmanagers/ion3/HISTORY
+++ b/windowmanagers/ion3/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: this version was LGPL
+
 2007-02-15 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Changed WEB_SITE.
 
