--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-05 Ladislav Hagara <hgr@vabo.cz>
+	* disk/avfs: new spell, A Virtual File System
+
 2007-12-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-creation/ghostess: New spell, a DSSI plugin host.
 
