--- a/utils/beagle/HISTORY
+++ b/utils/beagle/HISTORY
@@ -1,3 +1,7 @@
+2007-12-04 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.30. Fixed SOURCE_URL.
+	* DEPENDS: Added optional_depends monodoc
+
 2007-08-28 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 0.2.18
 
