--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.95
+
 2007-11-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.94
 
