--- a/gnome2-libs/goffice-0.5/HISTORY
+++ b/gnome2-libs/goffice-0.5/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to VERSION 0.5.4
+
 2007-11-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.5.3
 
