--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,8 @@
+2007-12-05 George Sherwood <geroge@beernabeer.com>
+	* DETAILS: Updated VERSION to 1.7.91.
+	* PRE_BUILD: Removed incorporated patch.
+	* seesion.patch: Removed. Incoporated Upstream.
+
 2007-11-22 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Added patch.
 	* session.patch: Added patch to fix problem when building
