--- a/utils/sudo/HISTORY
+++ b/utils/sudo/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++, cleaned up
+
 2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.9p9
 
