--- a/libs/libixp/HISTORY
+++ b/libs/libixp/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* CONFIGURE: devel version is no longer needed for wmii
+
 2007-11-17 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 0.4
 
