--- a/smgl/initng-ifiles/HISTORY
+++ b/smgl/initng-ifiles/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Elisamuel Resto <ryuji@sourcemage.org>
+	* BUILD: use cmake_build from FUNCTIONS
+
 2007-11-29 Ismael Luceno <ismael.luceno@gmail.com>
 	* Updated to the latest release
 
