--- a/chat-im/ekiga/HISTORY
+++ b/chat-im/ekiga/HISTORY
@@ -1,3 +1,6 @@
+2007-12-06 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: long desc formatting cleaned up
+
 2007-09-18 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to 2.0.11. Fixed SOURCE_URL
 
