--- a/libs/stlport/HISTORY
+++ b/libs/stlport/HISTORY
@@ -1,3 +1,6 @@
+2007-12-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.4
+
 2007-07-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update SOURCE_HASH
 
