--- a/chat-im/gajim/HISTORY
+++ b/chat-im/gajim/HISTORY
@@ -1,3 +1,6 @@
+2007-12-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.11.4, cleaned up
+
 2007-11-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.11.3
 	* DEPENDS: cleaned up to make it more readable
