--- a/x11-toolkits/wxgtk/HISTORY
+++ b/x11-toolkits/wxgtk/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: added `--enable-graphics_ctx' option
+
 2007-12-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.8.7 (new)
 
