--- a/printer/splix/HISTORY
+++ b/printer/splix/HISTORY
@@ -1,3 +1,8 @@
+2007-12-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.0
+	* DEPENDS: add jbigkit
+	* BUILD: add an extra sed
+
 2007-10-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.2
 
