--- a/devel/qt4pas/HISTORY
+++ b/devel/qt4pas/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version V1.56_Qt4.3.1
+
 2007-10-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version V1.54_Qt4.3.1
 
