--- a/libs/jbigkit/HISTORY
+++ b/libs/jbigkit/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: remove irrelevant file
+
 2007-12-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6
 	  spell created
