--- a/kde-apps/ksquirrel-libs/HISTORY
+++ b/kde-apps/ksquirrel-libs/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.0
+
 2007-11-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.4
 	* BUILD: touch all files to fix dates being in future!!
