--- a/kde-apps/digikam/HISTORY
+++ b/kde-apps/digikam/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Treeve Jelbert <treevesourcemage.org>
+	* DETAILS: version 0.9.3-rc1 (devel)
+
 2007-11-28 Treeve Jelbert <treevesourcemage.org>
 	* DETAILS: version 0.9.3-beta3 (devel)
 
