--- a/utils/plan9port/HISTORY
+++ b/utils/plan9port/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 20071208
+
 2007-08-09 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 20070726
 
