--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-09 George Sherwood <george@beernabeer.com>
+	* http/webkitgtk: New spell, web browser engine
+	* http/midori: New spell, broswer based in webkitgtk
+
 2007-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* graphics-libs/ilmbase: new spell, high dynamic-range (HDR)
 	  image file format library and tools
