--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,9 @@
+2007-12-23 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to 2.6.24-rc6-mm1
+	* info/patches/mm_patches/2.6.24-rc6-mm1: added
+	* latest.defaults: updated latest to patch-2.6.24-rc6
+	* info/patches/PRE_2_6/patch-2.6.24-rc6: added
+
 2007-12-19 Vlad Glagolev <stealth@sourcemage.org>
 	* latest.defaults: updated latest to patch-2.6.23.12
 	* info/patches/maintenance_patches/patch-2.6.23.12: added
