--- a/http/squid/HISTORY
+++ b/http/squid/HISTORY
@@ -1,3 +1,6 @@
+2007-12-24 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 3.0.STABLE1
+
 2007-11-28 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.6.STABLE17
 
