--- a/display/directfb/HISTORY
+++ b/display/directfb/HISTORY
@@ -1,3 +1,7 @@
+2007-12-23 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 1.1.1, switched to sha512sum
+	* PRE_BUILD: disabled regeneration of configure
+
 2007-09-23 Arjan Bouter <abouter@sourcemage.org>
 	* CONFIGURE: fixed typo
 	* DEPENDS: added warning for SDL, added libvncserver
