--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-24 Arjan Bouter <abouter@sourcemage.org>
 	* kernels/linux-fusion: new spell, IPC API for DirectFB
+	* display/splashy: new spell, userspace bootsplash app
 
 2007-12-23 Julien "_kaze_" ROZO <julien@rozo.org>
 	* collab/qsvn: new spell, a graphical Subversion client based on qt4
