--- a/devel/lazarus/HISTORY
+++ b/devel/lazarus/HISTORY
@@ -1,3 +1,6 @@
+2007-12-24 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD, INSTALL: set FPC, for use on x86_64
+
 2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.24-0 / 0.9.25-date
 
