--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,6 @@
+2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: version update to 0.5.7.95
+
 2007-12-02 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: version update to 0.5.7.1, fixed SOURCE_DIRECTORY
 	* BUILD, INSTALL: use default_python_(build|install)
