--- a/libs/redland/HISTORY
+++ b/libs/redland/HISTORY
@@ -1,3 +1,6 @@
+2007-12-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.7
+
 2007-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: db is optional
 
