--- a/devel/ragel/HISTORY
+++ b/devel/ragel/HISTORY
@@ -1,3 +1,6 @@
+2007-12-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.25
+
 2007-09-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.24
 
