--- a/python-devel/kaa-metadata/HISTORY
+++ b/python-devel/kaa-metadata/HISTORY
@@ -1,3 +1,6 @@
+2007-12-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.1
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.0
 
