--- a/devel/swig/HISTORY
+++ b/devel/swig/HISTORY
@@ -1,3 +1,6 @@
+2007-12-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.33
+
 2007-04-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD, configure.patch: deleted
