--- a/x11/xosview/HISTORY
+++ b/x11/xosview/HISTORY
@@ -1,3 +1,6 @@
+2007-12-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* INSTALL: added to fix install location and preparation #11268
+
 2007-12-01 Eric Sandall <sandalle@sourcemage.org>
 	* glibc-2.6.patch: Added to remove custom snprintf (Bug #14141)
 	* PRE_BUILD: Apply glibc-2.6.patch
