--- a/collab/webmin/HISTORY
+++ b/collab/webmin/HISTORY
@@ -1,3 +1,6 @@
+2007-12-26 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.390
+
 2007-11-10 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.380
 
