--- a/python-devel/setuptools/HISTORY
+++ b/python-devel/setuptools/HISTORY
@@ -1,3 +1,7 @@
+2007-12-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++, cleaned up
+	* INSTALL: installing the sources, not egg!
+
 2007-11-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6c7
 
