--- a/gnome2-libs/libbonobo/HISTORY
+++ b/gnome2-libs/libbonobo/HISTORY
@@ -1,3 +1,6 @@
+2007-12-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.20.3
+
 2007-10-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
