--- a/collab/webmin/HISTORY
+++ b/collab/webmin/HISTORY
@@ -1,3 +1,7 @@
+2007-12-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* INSTALL: fix spell name, still had caps
+	  fix bad logic, remnants of #7552
+
 2007-12-26 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.390
 
