--- a/collab/webmin/INSTALL
+++ b/collab/webmin/INSTALL
@@ -23,8 +23,11 @@ real_os_type="Source Mage GNU/Linux"                     &&
 real_os_version="1.0"                                    &&
 atboot=1                                                 &&
 nostart="1"                                              &&
-ssl=0                                                    &&
-spell_ok Net-SSLeay && ssl=1                             ||
+if is_depends_enabled $SPELL net-ssleay; then 
+  ssl=1
+else
+  ssl=0
+fi                                                       &&
 login="admin"                                            &&
 password=""                                              &&
 for (( C = 0; C < 8; ++C )) do
