--- a/utils/avahi/HISTORY
+++ b/utils/avahi/HISTORY
@@ -1,3 +1,7 @@
+2007-12-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 0.6.21, removed PATCHLEVEL
+	* PRE_BUILD, dbus.patch: added patch to compile with dbus < 1.1.1
+
 2007-10-18 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Incremented PATCHLEVEL=1
 	* PRE_BUILD: Create netdev group
