--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* video/smplayer: new spell, a frontend for MPlayer based on QT4
+
 2007-12-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* ftp/bnbt: added BNBT bittorrent tracker from Chris Dombroski #8633
 	* net/netstat-nat: added a NAT connection shower from Eduardo Tongson #8552
