--- a/graphics-libs/rmagick/HISTORY
+++ b/graphics-libs/rmagick/HISTORY
@@ -1,3 +1,6 @@
+2007-12-28 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 2.0.0, changed SOURCE_DIRECTORY back
+
 2007-11-01 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 2.0.0-beta5
 
