--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-28  Treeve Jelbert <treeve@sourcemage.org>
+	* printer/glabels: new spell, print labels 
+
 2007-12-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* video/smplayer: new spell, a frontend for MPlayer based on QT4
 
