--- a/kde-apps/kvpnc/HISTORY
+++ b/kde-apps/kvpnc/HISTORY
@@ -1,3 +1,6 @@
+2007-12-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: delete extra &&
+
 2007-12-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.0
 	  spell created
