--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2007-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.52
+
 2007-12-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.51
 
