--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2007-12-28 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to bugfix release 1.0.1
+
 2007-12-23 Thomas Orgis <sobukus@sourcemage.org>
 	* CONFIGURE, DEPENDS: arts output is not yet in stable release...
 
