--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,8 @@
+2007-12-28 George Sherwood <george@beernabeer.com>
+	* DEPENDS: depends libglade2. optional_depends webkitgtk
+	* PRE_BUILD: Added to apply patch
+	* webkit-current-api-update.diff: Patch to work with new webkitgtk api
+
 2007-12-20 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.4.10
 
