--- a/gnome2-libs/libgnomeprint/HISTORY
+++ b/gnome2-libs/libgnomeprint/HISTORY
@@ -1,3 +1,6 @@
+2007-12-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: libbonobo is useless
+
 2007-09-22 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.18.2
 
