--- a/kde4/kdegraphics4/HISTORY
+++ b/kde4/kdegraphics4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: delete imlib
+
 2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.97.0
 
