--- a/devel/graphviz/HISTORY
+++ b/devel/graphviz/HISTORY
@@ -1,3 +1,9 @@
+2007-12-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.16.1
+	* DEPENDS: changed expat from optional to depends
+	  added gettext as depends
+	  added swig, r, pango, gtk+2, and libgnomeui as optionals
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Remove the entire ./configure line or PRE_BUILD fails with:
 	  -C: command not found
